Fix _getContentsAsAttributedStringWithCompletionHandler availability for iOS. https://bugs.webkit.org/show_bug.cgi?id=195999

Patch by Olivier Robin <olivierrobin@chromium.org> on 2019-03-20
Reviewed by Tim Horton.

* UIProcess/API/Cocoa/WKWebViewPrivate.h:

Canonical link: https://commits.webkit.org/210278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243212 268f45cc-cd09-0410-ab3c-d52691b4dbfc